--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,8 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
+  "description": "A travel application built with React, Express, and Firebase.",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
